# RigolWFM

./: .gitattributes  .gitignore  .pages-ping  .readthedocs.yaml  AgilentAgxxBin.js  Bin5000.js  Bin70008000.js  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  LICENSE  LICENSE.txt  Lecroy10BeTrc.js  Lecroy10LeTrc.js  Lecroy23LeTrc.js  MANIFEST.in  Makefile  README.md  README.rst  Rigol1000cWfm.js  Rigol1000zWfm.js  Rigol2000Wfm.js  Rigol6000Wfm.js  Rigol70008000Bin.js  RigolDho8001000Bin.js  RigolDho8001000Wfm.js  RohdeSchwarzRtpWfmBin.js  SiglentOldBin.js  SiglentV01Bin.js  SiglentV02Bin.js  SiglentV1Bin.js  SiglentV2Bin.js  SiglentV3Bin.js  SiglentV4Bin.js  SiglentV5Bin.js  SiglentV6Bin.js  TektronixInternalIsf.js  TektronixWfm001BeWfm.js  TektronixWfm001LeWfm.js  TektronixWfm002BeWfm.js  (+19 more)
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml
RigolWFM/: __init__.py  agilent.py  agilent_agxx_bin.py  agilent_bin.py  bin5000.py  bin7000_8000.py  bindho1000.py  channel.py  dho.py  isf.py  jupyter_lite_config.json  lecroy.py  lecroy_1_0_be.py  lecroy_1_0_be_trc.py  lecroy_1_0_le.py  lecroy_1_0_le_trc.py  lecroy_2_3_be.py  lecroy_2_3_be_trc.py  lecroy_2_3_le.py  lecroy_2_3_le_trc.py  mso5000.py  mso5074.py  mso7000_8000.py  rigol.py  rigol_1000b_wfm.py  rigol_1000c_wfm.py  rigol_1000e_wfm.py  rigol_1000z_logic.py  rigol_1000z_wfm.py  rigol_2000_wfm.py  rigol_4000_wfm.py  rigol_6000_wfm.py  rigol_7000_8000_bin.py  rigol_dho800_1000_bin.py  rigol_dho800_1000_wfm.py  rigol_mso5000_bin.py  rohde_schwarz.py  rohde_schwarz_rtp_wfm.py  rohde_schwarz_rtp_wfm_bin.py  siglent.py  (+53 more)
doc/: 0-Basics.ipynb  1-DS1000E-Waveforms.ipynb  1-DS1000Z-Waveforms-Part2.ipynb  1-DS1000Z-Waveforms.ipynb  1-DS2000-Waveforms.ipynb  1-DS4000-Waveforms.ipynb  reading-rigol-wfm-file.ipynb  tutorial-reading-rigol-wfm-file.ipynb
doc/other-rigol-converters/: DS1022C2dat.c  DS1102D.m  readRigolWFM.matlab
doc/other-rigol-scopes/: wfm1000C.c  wfm1000D.m  wfm1000D.py
docs/: 0-Basics.ipynb  0-Saving-As-NPZ-and-MAT.ipynb  0-Saving-As-Sigrok-SR.ipynb  0-Saving-As-WAV.ipynb  1-Agilent-Waveforms.ipynb  1-DHO1000-Waveforms.ipynb  1-DHO800-Waveforms.ipynb  1-DS1000B-Waveforms.ipynb  1-DS1000C-Waveforms.ipynb  1-DS1000D-Waveforms.ipynb  1-DS1000E-Waveforms.ipynb  1-DS1000Z-Waveforms.ipynb  1-DS1102D-Waveforms.ipynb  1-DS2000-Waveforms.ipynb  1-DS4000-Waveforms.ipynb  1-LeCroy-Waveforms.ipynb  1-MSO5000-Waveforms.ipynb  1-Rohde-Schwarz-Waveforms.ipynb  Agilent.ipynb  Exporting-MAT.ipynb  Exporting-NPZ.ipynb  Exporting-Sigrok-SR.ipynb  Exporting-WAV.ipynb  LeCroy.ipynb  Quick-Start.ipynb  Rigol-DHO1000.ipynb  Rigol-DHO800.ipynb  Rigol-DS1000B.ipynb  Rigol-DS1000C.ipynb  Rigol-DS1000D.ipynb  Rigol-DS1000E.ipynb  Rigol-DS1000Z.ipynb  Rigol-DS2000.ipynb  Rigol-DS4000.ipynb  Rigol-MSO5000.ipynb  RigolWFM.rst  Rohde-Schwarz.ipynb  conf.py  index.rst  requirements.txt
docs/tables/: index.rst
ksy/: agilent_AGxx_bin.ksy  agilent_agxx_bin.ksy  agilent_bin.ksy  bin5000.ksy  bin7000_8000.ksy  bindho1000.ksy  lecroy_1_0_be.ksy  lecroy_1_0_be_trc.ksy  lecroy_1_0_le.ksy  lecroy_1_0_le_trc.ksy  lecroy_2_3_be.ksy  lecroy_2_3_be_trc.ksy  lecroy_2_3_le.ksy  lecroy_2_3_le_trc.ksy  rigol_1000B_wfm.ksy  rigol_1000C_wfm.ksy  rigol_1000E_wfm.ksy  rigol_1000Z_wfm.ksy  rigol_1000b_wfm.ksy  rigol_1000c_wfm.ksy  rigol_1000e_wfm.ksy  rigol_1000z_wfm.ksy  rigol_2000_wfm.ksy  rigol_4000_wfm.ksy  rigol_6000_wfm.ksy  rigol_7000_8000_bin.ksy  rigol_dho800_1000_bin.ksy  rigol_dho800_1000_wfm.ksy  rigol_mso5000_bin.ksy  rohde_schwarz_rtp_wfm.ksy  rohde_schwarz_rtp_wfm_bin.ksy  siglent_old_bin.ksy  siglent_old_platform.ksy  siglent_v0_1.ksy  siglent_v0_1_bin.ksy  siglent_v0_2.ksy  siglent_v0_2_bin.ksy  siglent_v1.ksy  siglent_v1_bin.ksy  siglent_v2.ksy  (+36 more)
rigolWFM/: wfm.py
scripts/: ksy_to_table.py  wfmutil.py
tests/: DS2202.wfm  DS4022-A.wfm  __init__.py  cli_helpers.py  mat_helpers.py  test_2.py  test_4.py  test_5.py  test_5074.py  test_6.py  test_7_8.py  test_agilent.py  test_all_notebooks.py  test_autodetect.py  test_b.py  test_c.py  test_d.py  test_dho1000.py  test_dho800.py  test_e.py  test_isf.py  test_ksy_to_table.py  test_lecroy.py  test_rohde_schwarz.py  test_siglent.py  test_tek.py  test_wfmconvert.py  test_wfmconvert_sigrok.py  test_wfmview.py  test_yokogawa.py  test_z.py  test_z_logic.py
tests/expected_info/2/: DS2000-A.txt  DS2000-B.txt  DS2072A-1.txt  DS2072A-2.txt  DS2072A-3.txt  DS2072A-4.txt  DS2072A-5.txt  DS2072A-6.txt  DS2072A-7.txt  DS2072A-8.txt  DS2072A-9.txt
tests/expected_info/4/: DS4022-A.txt  DS4022-B.txt  (+2 more)
wfm/: DHO1047.wfm  DHO1074.wfm  DHO824-ch12.wfm  DHO824-ch1234.wfm  DS1000E-A.wfm  DS1000E-B.wfm  DS1000E-C.wfm  DS1000E-D.wfm  DS1042C-A.csv  DS1042C-A.wfm  DS1052E.csv  DS1052E.wfm  DS1054Z-A.csv  DS1054Z-A.wfm  DS1054Z-B.wfm  DS1054Z-C.txt  DS1054Z-CH1UartCH2OffCh3SquareCh4Sine.wfm  DS1054Z-CH1UartCH2SquareCh3OffCh4Sine.wfm  DS1054Z-CH1UartCH2SquareCh3SineCH4Off.wfm  DS1054Z-ch1SquareCH2Uart.csv  DS1054Z-ch1SquareCH2Uart.wfm  DS1054Z-ch1SquareCH4Uart.csv  DS1054Z-ch1SquareCH4Uart.wfm  DS1054Z.wfm  DS1074Z-A.csv  DS1074Z-A.txt  DS1074Z-B.csv  DS1074Z-B.txt  DS1102D-A.csv  DS1102D-A.wfm  DS1102E-A.csv  DS1102E-A.wfm  DS1102E-B.csv  DS1102E-B.wfm  DS1102E-C.wfm  DS1102E-D.csv  DS1102E-D.txt  DS1102E-D.wfm  DS1102E-E.wfm  DS1102E-F.wfm  (+47 more)
wfm-examples/: DS1052E.wfm  laser-modes-1.wfm  laser-modes-2.wfm
wfmview/: AgilentAgxxBin.js  AgilentBin.js  Bindho1000.js  Lecroy10Be.js  Lecroy10BeTrc.js  Lecroy10Le.js  Lecroy10LeTrc.js  Lecroy23Be.js  Lecroy23BeTrc.js  Lecroy23Le.js  Lecroy23LeTrc.js  Rigol1000bWfm.js  Rigol1000cWfm.js  Rigol1000eWfm.js  Rigol1000zWfm.js  Rigol2000Wfm.js  Rigol4000Wfm.js  RigolDho8001000Bin.js  RigolMso5000Bin.js  RohdeSchwarzRtpWfm.js  RohdeSchwarzRtpWfmBin.js  SiglentOldBin.js  SiglentOldPlatform.js  SiglentV01.js  SiglentV01Bin.js  SiglentV02.js  SiglentV02Bin.js  SiglentV1.js  SiglentV1Bin.js  SiglentV2.js  SiglentV2Bin.js  SiglentV3.js  SiglentV3Bin.js  SiglentV4.js  SiglentV4Bin.js  SiglentV5.js  SiglentV5Bin.js  SiglentV6.js  SiglentV6Bin.js  TekIsf.js  (+21 more)
(+68 files in other folders)
