[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ["F403", "E501", "F401"]
exclude =['.git', '__pycache__', 'docs', 'wfm']

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "todo",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements-dev.txt",
    "wfm/*",
    "ksy/*"
]
