[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["RigolWFM"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "RigolWFM.__version__"}

[project]
name = "RigolWFM"
authors = [
    {name = "Scott Prahl", email = "scott.prahl@oit.edu"},
]
description = "Read and parse Rigol Oscilloscope WFM files"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "BSD-3-Clause"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = [
    "Rigol",
    "wfm",
    "DS1000B",
    "DS1074B",
    "DS1104B",
    "DS1204B",
    "DS1000C",
    "DS1000CD",
    "DS1000M",
    "DS1000MD",
    "DS1042C",
    "DS1102CA",
    "DS1202CA",
    "DS1302CA",
    "DS1062CA",
    "DS1000D",
    "DS1102D",
    "DS1052D",
    "DS1102D",
    "DS1000E",
    "DS1052E",
    "DS1102E",
    "DS1000Z",
    "DS1054Z",
    "MSO1054Z",
    "DS1074Z",
    "DS1074Z-S",
    "MSO1074Z",
    "DS1104Z",
    "DS1104Z-S",
    "MSO1104Z",
    "DS1202Z",
    "DS2000",
    "DS2072A",
    "DS2102A",
    "MSO2102A",
    "MSO2102A-S",
    "DS2202A",
    "MSO2202A",
    "MSO2202A-S",
    "DS2302A",
    "MSO2302A",
    "MSO2302A-S",
    "DS4000",
    "DS4012",
    "MSO4012",
    "DS4014",
    "MSO4014",
    "DS4022",
    "MSO4022",
    "DS4024",
    "MSO4024",
    "DS4032",
    "MSO4032",
    "DS4034",
    "MSO4034",
    "DS4052",
    "MSO4052",
    "DS4054",
    "MSO4054",
    "DS6000",
    "DS6062",
    "DS6064",
    "DS6102",
    "DS6104",
    "MSO5000",
    "MSO5074",
    "MSO5354",
    "MSO7000",
    "DS7000",
    "MSO8000",
    "DS8000",
    "DHO800",
    "DHO814",
    "DHO824",
    "DHO1000",
    "DHO1074",
    "DHO1104",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "kaitaistruct>=0.9",
    "numpy",
    "matplotlib",
    "requests",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=8.1.3",
    "nbsphinx>=0.9.7",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "ipython",
]
dev = [
  "pytest",
  "yamllint",
#  "ksylint",
  "rstcheck[toml,sphinx]",
  "pylint",
  "ruff",
  "mypy",

  "pip",
  "check-manifest",
  "pyroma",
  "build",
  "wheel",
  "setuptools",

  # Notebooks (local JupyterLab workflows)
  "ipykernel",
  "jupyterlab",
  "nbconvert",
  "nbformat",
  "imageio",
  "pandas",
]
lite = [
    "jupyterlite-core>=0.7,<0.8",
    "jupyterlite-pyodide-kernel>=0.7,<0.8",
]

[project.scripts]
wfmconvert = "RigolWFM.wfmconvert:main"

[project.urls]
Homepage = "https://github.com/scottprahl/RigolWFM"
Documentation = "https://rigolwfm.readthedocs.io"
Source = "https://github.com/scottprahl/RigolWFM"
Tracker = "https://github.com/scottprahl/RigolWFM/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:MSO5074 voltage values are approximate:UserWarning",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "C0103", "C0209", "C0302",
    "R0801", "R0902", "R0904", "R0911", "R0912", "R0913", "R0914", "R0915", "R0917", "R1702",
    "W0511", "W0718"
]

[tool.pylint.main]
ignore-patterns = [
    "^\\.#",
    # Kaitai-generated parsers from ksy/
    "^bin5000\\.py$",
    "^bin7000_8000\\.py$",
    "^bindho1000\\.py$",
    "^lecroy_[0-9]_[0-9]_(be|le)\\.py$",
    "^tek_isf\\.py$",
    "^tek_wfm_[0-9]{3}_(be|le)\\.py$",
    "^wfm1000.*\\.py$",
    "^wfm2000\\.py$",
    "^wfm4000\\.py$",
    "^wfm6000\\.py$",
    "^wfmdho1000\\.py$",
    "^yokogawa_wvf\\.py$",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    "docs",
    "wfm",
    # Kaitai-generated parsers from ksy/
    "RigolWFM/bin5000.py",
    "RigolWFM/bin7000_8000.py",
    "RigolWFM/bindho1000.py",
    "RigolWFM/lecroy_*.py",
    "RigolWFM/tek_isf.py",
    "RigolWFM/tek_wfm_*.py",
    "RigolWFM/wfm1000*.py",
    "RigolWFM/wfm2000.py",
    "RigolWFM/wfm4000.py",
    "RigolWFM/wfm6000.py",
    "RigolWFM/wfmdho1000.py",
    "RigolWFM/yokogawa_wvf.py",
]

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D200", "D212", "F403", "E501", "F401"]
pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "todo",
    "docs/*",
    "docs/**/*",
    "docs/vendors",
    "docs/vendors/**",
    "Makefile",
    "release.txt",
    "RigolWFM/jupyter_lite_config.json",
    "wfm/*",
    "ksy/*",
    "tests/files/wfm/*.wfm",
]

[tool.mypy]
python_version = "3.10"
files = ["RigolWFM"]
exclude = [
    "RigolWFM/wfm[0-9].*\\.py",
    "RigolWFM/bin[0-9].*\\.py",
    "RigolWFM/wfmdho1000\\.py",
    "RigolWFM/bindho.*\\.py",
]

[[tool.mypy.overrides]]
module = ["kaitaistruct"]
ignore_missing_imports = true
