[bdist_wheel]
universal=1

[metadata]
name = RigolWFM
version = 0.8.1
author = Scott Prahl
author_email = scott.prahl@oit.edu
url = https://github.com/scottprahl/RigolWFM.git
description = Read and parse Rigol Oscilloscope WFM files
license = BSD 3-clause
keywords =
    Rigol
    wfm
    DS1000C
    DS1000CD
    DS1000M
    DS1000MD
    DS1102CA
    DS1202CA
    DS1302CA
    DS1062CA
    DS1000D
    DS1052D
    DS1102D
    DS1000E
    DS1052E
    DS1102E
    DS1000Z
    DS1054Z
    MSO1054Z
    DS1074Z
    DS1074Z-S
    MSO1074Z
    DS1104Z
    DS1104Z-S
    MSO1104Z
    DS1202Z
    DS2000
    DS2072A
    DS2102A
    MSO2102A
    MSO2102A-S
    DS2202A
    MSO2202A
    MSO2202A-S
    DS2302A
    MSO2302A
    MSO2302A-S
    DS4000
    DS4012
    MSO4012
    DS4014
    MSO4014
    DS4022
    MSO4022
    DS4024
    MSO4024
    DS4032
    MSO4032
    DS4034
    MSO4034
    DS4052
    MSO4052
    DS4054
    MSO4054
    DS6000
    DS6062
    DS6064
    DS6102
    DS6104

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = RigolWFM
install_requires = kaitaistruct; numpy; matplotlib; requests
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44

[options.entry_points]
console_scripts = wfmconvert = RigolWFM.wfmconvert:main

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[check-manifest]
ignore = 
    release.txt
    todo
    Makefile
    wfm
    ksy
    wfm/*
    ksy/*

