[metadata]
description = Read and parse Rigol Oscilloscope WFM files

keywords =
    Rigol
    wfm
    DS1000B
    DS1074B
    DS1104B
    DS1204B
    DS1000C
    DS1000CD
    DS1000M
    DS1000MD
    DS1042C
    DS1102CA
    DS1202CA
    DS1302CA
    DS1062CA
    DS1000D
    DS1102D
    DS1052D
    DS1102D
    DS1000E
    DS1052E
    DS1102E
    DS1000Z
    DS1054Z
    MSO1054Z
    DS1074Z
    DS1074Z-S
    MSO1074Z
    DS1104Z
    DS1104Z-S
    MSO1104Z
    DS1202Z
    DS2000
    DS2072A
    DS2102A
    MSO2102A
    MSO2102A-S
    DS2202A
    MSO2202A
    MSO2202A-S
    DS2302A
    MSO2302A
    MSO2302A-S
    DS4000
    DS4012
    MSO4012
    DS4014
    MSO4014
    DS4022
    MSO4022
    DS4024
    MSO4024
    DS4032
    MSO4032
    DS4034
    MSO4034
    DS4052
    MSO4052
    DS4054
    MSO4054
    DS6000
    DS6062
    DS6064
    DS6102
    DS6104

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
packages = RigolWFM
python_requires = >=3.7
setup_requires = setuptools>=44
include_package_data = True
install_requires = 
    kaitaistruct
    numpy
    matplotlib
    requests

[options.entry_points]
console_scripts = wfmconvert = RigolWFM.wfmconvert:main
